ASCII media type support & fix a bug in file submission error handling
* Added ASCII media processing
* Added ASCII media display
* Added ASCII media type

Rebased from Joar Wandborg's ascii art branch (squashed to remove the
commits borrowing code of dubious license)

Fixed a bug in file submission error handling:
 - Moved file-extension condition out of loop (what did it do there?)
 - Updated file submission tests
 - Changed error handling in file submission, should now report more
   than absolutely necessary.

--- a/mediagoblin/static/css/base.css
+++ b/mediagoblin/static/css/base.css
@@ -402,3 +402,15 @@ table.media_panel th {
   margin-top: 10px;
   margin-left: 10px;
 }
+
+/* ASCII art */
+
+@font-face {
+  font-family: Inconsolata;
+  src: local('Inconsolata'), url('../fonts/Inconsolata.otf') format('opentype')
+}
+
+.ascii-wrapper pre {
+  font-family: Inconsolata, monospace;
+  line-height: 1em;
+}
